# crud-rust-api-mongo

./: Cargo.toml  Dockerfile  README.md
src/: auth.rs  database.rs  main.rs
