[package]
name = "crud-rust-api-mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.1"
log = "0.4"
futures = "0.3"
utoipa = {version="4.2.0", features = ["actix_extras"]}
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
utoipa-redoc = { version="3.0.0", features = ["actix-web"] }
utoipa-rapidoc = { version="3.0.0", features = ["actix-web"] }
mongodb = "2.0.0"
sha2 = { version = "0.10", default-features = false }
actix-cors ="0.7.0"
openssl = "0.10.32"
hex = "0.4"
base64 = "0.21.7"